DuPont DevSB/src/objects/ConstructionPts__CPTerritory__c.object
<CustomObject>
    <fields>
        <fullName>ConstructionPts__CP_Project_Fields__c</fullName>
        <defaultValue>&quot;Name&quot;</defaultValue>
        <description>columns displayed for the CP Project list in the &quot;Projects by Territory&quot; section</description>
        <label>CP Project Fields</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ConstructionPts__Territory_Groups__c</fullName>
        <label>Territory Groups</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ConstructionPts__Territory_Users__c</fullName>
        <label>Territory Users</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Legacy_One_DuPont_SFID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This field is populated with the legacy One DuPont SF ID and was used during the split to map related records during the split and insert process to maintain the migrated record’s parent child record relationships.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the pre-split original 18 digit Salesforce ID of this record that came from the original One Dupont Salesforce instance before the business units were separated. Its is case sensitive and unique.</inlineHelpText>
        <label>Legacy One DuPont SFID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>CP Territory</label>
    <listViews>
        <fullName>ConstructionPts__All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>CP Territory Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CP Territories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>